--- a/USPSC-pre-textual-IFSC.tex
+++ b/USPSC-pre-textual-IFSC.tex
@@ -21,8 +21,8 @@
 % dados complementares para CAPA e FOLHA DE ROSTO
 % ---
 \universidade{UNIVERSIDADE DE S\~AO PAULO}
-\titulo{Muons in Air Showers}
-\titleabstract{Muons in Air Showers}
+\titulo{Experimental Studies of the Muonic Component of Extensive Air Showers}
+\titleabstract{Estudos Experimentais da Componente Mu\^onica de Chuveiros Atmosf\'ericos Extensos}
 \autor{Raul Ribeiro Prado}
 \autorficha{Prado, R. R.}
 \autorabr{PRADO, R. R.}
