--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -3,6 +3,24 @@
 % Agradecimentos
 % ---=====
 \begin{agradecimentos}
+  I am very grateful to:
+  \begin{itemize}
+  \item
+    %\item my advisor Prof. Vitor de Souza;
+
+  %\item the LIP group, in particular to Prof. Mario Pimenta and Ruben Conceição; 
+
+  %\item the KIT group, in particular to Michael Unger, Alex Herve and Darko Veberic; 
+    
+  %\item my collegues from the Astroparticle Physics group at IFSC;
+
+  %\item family
+    
+  %\item friend
+    
+  %\item FAPESP
+ 
+  \end{itemize}
 
 \end{agradecimentos}
 % ---
