--- a/figures_hadron.tex
+++ b/figures_hadron.tex
@@ -1334,7 +1334,10 @@
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_158_h0_p5}
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_158_h0_p6}
 
-  \caption{}
+  \caption{Double-differential spectra $\frac{\text{d}^2n}{\text{d}\pp\text{d}\pT}$
+    of \lamb for the 158 \GeVc data set. Each plot shows one \pp bins and the value
+    of $\langle\pp\rangle$ is indicated inside it. The black lines show the statistical
+    uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all158:h0}
 \end{figure}
 
@@ -1351,7 +1354,10 @@
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_158_h1_p5}
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_158_h1_p6}
 
-  \caption{}
+  \caption{Double-differential spectra $\frac{\text{d}^2n}{\text{d}\pp\text{d}\pT}$
+    of \antilamb for the 158 \GeVc data set. Each plot shows one \pp bins and the value
+    of $\langle\pp\rangle$ is indicated inside it. The black lines show the statistical
+    uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all158:h1}
 \end{figure}
 
@@ -1372,7 +1378,10 @@
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_158_h2_p7}
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_158_h2_p8}
 
-  \caption{}
+  \caption{Double-differential spectra $\frac{\text{d}^2n}{\text{d}\pp\text{d}\pT}$
+    of \kzeros for the 158 \GeVc data set. Each plot shows one \pp bins and the value
+    of $\langle\pp\rangle$ is indicated inside it. The black lines show the statistical
+    uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all158:h2}
 \end{figure}
 
@@ -1389,7 +1398,10 @@
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_350_h0_p5}
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_350_h0_p6}
 
-  \caption{}
+  \caption{Double-differential spectra $\frac{\text{d}^2n}{\text{d}\pp\text{d}\pT}$
+    of \lamb for the 350 \GeVc data set. Each plot shows one \pp bins and the value
+    of $\langle\pp\rangle$ is indicated inside it. The black lines show the statistical
+    uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all350:h0}
 \end{figure}
 
@@ -1406,7 +1418,10 @@
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_350_h1_p5}
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_350_h1_p6}
 
-  \caption{}
+  \caption{Double-differential spectra $\frac{\text{d}^2n}{\text{d}\pp\text{d}\pT}$
+    of \antilamb for the 350 \GeVc data set. Each plot shows one \pp bins and the value
+    of $\langle\pp\rangle$ is indicated inside it. The black lines show the statistical
+    uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all350:h1}
 \end{figure}
 
@@ -1427,6 +1442,9 @@
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_350_h2_p7}
   \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{spec/spec_pt_350_h2_p8}
 
-  \caption{}
+  \caption{Double-differential spectra $\frac{\text{d}^2n}{\text{d}\pp\text{d}\pT}$
+    of \kzeros for the 350 \GeVc data set. Each plot shows one \pp bins and the value
+    of $\langle\pp\rangle$ is indicated inside it. The black lines show the statistical
+    uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all350:h2}
 \end{figure}
