--- a/introduction.tex
+++ b/introduction.tex
@@ -18,73 +18,70 @@ with atmospheric nuclei and start a cascade of secondary particles that
 can eventually reach the ground. After Auger's discovery, the idea
 of measuring the properties of cosmic rays through the detection of EAS
 with arrays of particle detectors at ground became a central concept for
-the experimental cosmic rays studies.
+the experimental cosmic ray studies.
 
 The advance of techniques to detect EAS and the construction
-of larger and larger detector arrays allowed us to extend
-cosmic ray studies up to the very high energy regions, in which
+of large detector arrays allowed us to extend
+cosmic ray studies up to the very high energy regions, where
 the flux of particles is very low. Currently, the cosmic ray
 energy spectrum (its flux as a function of energy) is well known
-from \e{9} up to \E{21}. Although this spectrum presents a power-law shape,
-a number of features can be observed, which motivate the investigation
-of the astrophysical phenomena that originated them.
+from \e{9} up to \E{21}. Although this spectrum follows an overall power-law shape,
+a number of features are observed and the  understanding of these features
+in terms of astrophysical phenomena is one the motivations of the field.
 The main interest of this thesis is on the Ultra-High Energy Cosmic Rays (UHECR)
 region ($E>\E{17}$), where two spectrum features are observed: the \emph{ankle},
 which is a softening of the flux around $4\times\E{18}$ and the \emph{suppression},
 which is an abrupt reduction of the flux above $4\times\E{19}$.
-Most questions about the nature of these UHECR are still opened,
+Most questions about the nature of the UHECR are still opened,
 and in particular, the actual nature of the ankle and the suppression is still
 a matter of discussions.
+
 Measuring the properties of UHECR is the main goal of the largest
 cosmic ray experiment even built, the Pierre Auger Observatory,
 located in Malargue, Argentina, and operating since 2004~\cite{\AugerPaper}.
 While its large collecting area (3000 km$^2$) guarantee a large
-event statistics, its hybrid detection system which includes
+event statistics, its hybrid detection system that includes
 surface detectors and fluorescence telescopes can provide a
 precise measurements of the properties of the EAS.
 An overview of the current status of the UHECR field
-and a brief introduction of the Pierre Auger Observatory
-will be given in~\cref{sec:uhecr} of this thesis. 
+and an introduction to the Pierre Auger Observatory
+will be given in~\cref{sec:uhecr} of this thesis. \newline
 
 The precise inference of the properties of UHECR
-from EAS measurements requires a good understanding
-of these objects. Because of their complexity,
-Monte Carlo simulation codes are used to describe them
-with the required precision. Among the possible sources
-of theoretical uncertainties related to the
+from EAS measurements requires a deep understanding
+of these objects. The most complete modeling of EAS is
+acquieved by means of Monte Carlo simulations.
+Among the possible sources of uncertainties related to the
 simulation of EAS, the main one is the modeling
 of the hadronic interactions, which is done
 by means of the so-called \emph{hadronic interaction models}. 
-Because of their phenomenological approaches,
-these models need to be tuned by using accelerator measurements
+Because of their phenomenological nature,
+these models are tuned by using accelerator measurements
 and a number of problems with this process originate a substantial
 uncertainty on the predictions of the EAS properties by simulations.
-An overview of the EAS physics and simulations is given
-in~\cref{sec:showers}
 
-The relevance of EAS simulations comes mostly from the fact that
-some properties of UHECR, including the mass composition,
+The importance of EAS simulations comes mostly from the fact that
+some properties of UHECR, including its mass composition,
 can only be inferred by the comparison of EAS measurements
 to the predictions from simulations.
 The most reliable composition analysis at the UHECR regime
 are based on the shower maximum parameter (\xmax) which is defined
-at the atmospheric depth at which the shower reaches the maximum
+as the atmospheric depth at which the shower reaches the maximum
 number of particles. Apart from the \xmax, shower parameters related
 to the muonic component of the showers are also sensitive to
 the cosmic ray composition, the most common one being the number
 of muons in the shower (\nmu). However, a number of measurements of the \nmu
-have shown that the comparison with predictions from simulations lead
+have shown that the comparison with predictions from simulations leads
 to inconsistent results. To be more precise, the \nmu observed is systematically
-larger than the ones predicted by Monte Carlo simulations using hadronic interaction
+larger than the ones predicted by EAS simulations using hadronic interaction
 models. Although this is traditionally known as \emph{muon deficit problem},
 further EAS measurements have shown
-that the Monte Carlo simulation with hadronic interaction models
-also fail to predict other properties of the muonic component.
-A direct consequence is that measurements of muonic observables cannot be
+that the simulations also fail to predict other properties of the muonic component.
+As a direct consequence, measurements of muonic observables cannot be
 properly used to infer cosmic ray composition.  
-A summary of measurements of EAS observables is also given in~\cref{sec:showers},
-including a number of manifestations of the problem with prediction of muon properties by simulations
-
+An overview of the EAS physics, simulations and a summary of measurements
+of EAS observables at the UHECR regime will be given in~\cref{sec:showers}
+of this thesis. \newline
 
 In this thesis, the problem of describing the properties of the muonic component of EAS
 by simulations is approached from an experimental perspective by three different fronts.
@@ -95,7 +92,7 @@ of the measured \nmu moments in terms of mass composition which takes into accou
 the misprediction of the \nmu by the simulations. The method is tested by using
 a set of simulations and it is expected to be applicable for the analysis
 of future measurements of the \nmu by AugerPrime or other experiments.
-Preliminary stages of this work can be found in Refs.~\cite{}.
+Preliminary stages of this work can be found in Refs.~\cite{Prado:2015iaz,GAP2014,GAP2015}.
 
 The second front is presented in~\cref{sec:observable} where
 the Ref.~\cite{Prado:2017ijs} is reproduced. The main idea is to explore the potentialities
@@ -114,4 +111,5 @@ aiming the measurements of hadron production spectra
 in $\pi$-C interactions. These measurements are valuable for the understanding of the muon
 production in EAS (see~\cref{sec:showers}) and they are an important part of
 the cosmic ray physics programee of \NASixtyOne experiment.
+A preliminary stage of this work can be found in Ref.~\cite{\RaulICRC}.
 Finally, in~\cref{sec:conclusions} the summary of the thesis are presented.
