--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,38 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@techreport{GAP2014,
+      author        = "ConceiÇÃo, R. and Pimenta, M. and Prado, R.R.",
+      title         = "Is it possible to discriminate mass composition scenario from new physics?",
+      year          = "2014",
+      note  = "GAP2014-069 (Internal Note of Pierre Auger Observatory)"
+}
+
+@techreport{GAP2015,
+      author        = "Prado, R.R. and ConceiÇÃo, R. and Pimenta, M. and Souza, Vitor de",
+      title         = "Predictions of the Moments of the Number of Muons Distributions",
+      year          = "2015",
+      note  = "GAP2015-025 (Internal Note of Pierre Auger Observatory)"
+}
+
+
+
+@article{Prado:2015iaz,
+      author         = "Prado, Raul Ribeiro and Concei\c{c}\~ao, Ruben and Pimenta,
+                        M\'ario and de Souza, Vitor",
+      title          = "{The study on the potential of muon measurements on the
+                        determination of the cosmic ray composition using a new
+                        fast simulation technique}",
+      booktitle      = "{Proceedings, 34th International Cosmic Ray Conference
+                        (ICRC 2015): The Hague, The Netherlands, July 30-August 6,
+                        2015}",
+      journal        = "PoS",
+      volume         = "ICRC2015",
+      year           = "2016",
+      pages          = "292",
+      SLACcitation   = "%%CITATION = POSCI,ICRC2015,292;%%"
+}
+
 @article{Auger1938, 
    author = {Auger, P. and others},
    title = {Extensive cosmic-ray showers},
@@ -296,7 +328,6 @@ doi = {10.1143/PTPS.6.93}
       booktitle      = "{Proceedings,  	 32nd International Cosmic Ray Conference
                         (ICRC 2011): Beijing, China, August 11-18, 2011}",
       collaboration  = "Pierre Auger",
-      url            = "http://inspirehep.net/record/924989/files/924989.pdf",
       volume         = "3",
       year           = "2011",
       pages          = "153",
@@ -625,8 +656,7 @@ doi = {10.1143/PTPS.6.93}
 author = {Olinto, a V},
 journal = {Phys.Rep.},
 pages = {329--348},
-title = {{Ultra high energy cosmic rays: the theoretical challenge}},
-url = {papers3://publication/uuid/36651A17-8CB6-44DD-9BFB-26C9FB011049},
+title = {Ultra high energy cosmic rays: the theoretical challenge},
 volume = {333},
 year = {2000}
 }
