--- a/uhecr.tex
+++ b/uhecr.tex
@@ -27,6 +27,10 @@ in Refs.~\cite{Aloisio:2017ooo,Mollerach:2017idb}.
   \caption{Compilation of measurements of the cosmic ray energy spectrum from Ref.~\cite{SwordyPlot2001}.
   Two of the spectrum features are indicates: the knee and the ankle.}
   \label{fig:uhecr:overview:spec:swordy}
+
+  \begin{center}
+    Source: By the author.
+  \end{center}
 \end{figure}
 
 The cosmic ray flux as a function of energy is the so-called \emph{energy spectrum}
