--- a/abstract.tex
+++ b/abstract.tex
@@ -8,17 +8,36 @@
 	\begin{flushleft} 
 		\setlength{\absparsep}{0pt} % ajusta o espaçamento dos parágrafos do resumo		
  		\SingleSpacing 
- 		\imprimirautorabr~ ~\textbf{\imprimirtitleabstract}.	\imprimirdata.  \pageref{LastPage}p. 
+ 		\imprimirautorabr~ ~\textbf{\imprimirtitulo}. \imprimirdata.  \pageref{LastPage}p. 
 		%Substitua p. por f. quando utilizar oneside em \documentclass
 		%\pageref{LastPage}f.
 		\imprimirtipotrabalho~-~\imprimirinstituicao, \imprimirlocal, 	\imprimirdata. 
  	\end{flushleft}
 	\OnehalfSpacing 
-   This is the english abstract.
+
+Ultra-High Energy Cosmic Rays (UHECR) can only be measured by the detection of
+Extensive Air Showers (EAS) created by the interaction of the cosmic ray particle
+with an atmospheric nuclei. The inference of some of the properties of UHECR,
+like their mass composition, is only possible by the comparison of measurements
+of EAS observables to predictions from Monte Carlo simulations.
+The most important source of uncertainties on the description of EAS by the simulations
+is the modeling of hadronic interactions that is done by hadronic interaction models.
+For many years it has been known that the simulations fail on predicting the EAS
+observables related to their muonic component. The most evident manifestation of that is
+called \emph{muon deficit problem} due to the fact that the number of muons in EAS
+predicted by simulations is much smaller than the observed ones.
+The aim of this thesis is to approach this problem by three distinct fronts.
+First, a method is developed to interpret measurements of number of muons in terms
+of cosmic rays composition in despite of the muon deficit problem.
+Second, an EAS observable which is sensitive to the muon energy spectrum at ground
+and, consequently, can be used to constrain hadronic interaction models is proposed
+and tested. Third and final, the muon production in air showers is studied through
+measurements of hadron production spectra in pion-carbon interactions
+by \NASixtyOne experiment.  
 
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Keywords}: .
+   \textbf{Keywords}:Ultra-high energy cosmic rays. Extensive air showers. Muonic component of air showers
  \end{otherlanguage*}
 \end{resumo}
